# ImageNodeEditor

./: .gitignore  CMakeLists.txt  README.md
docs/: analysis.md
src/: main.cpp
src/core/: DataValue.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  Port.h  WorkflowExecutor.cpp  WorkflowExecutor.h  WorkflowGraph.cpp  WorkflowGraph.h
src/gui/: GraphScene.cpp  GraphScene.h  GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  ParameterEditorWidget.cpp  ParameterEditorWidget.h  ParameterPanel.cpp  ParameterPanel.h
src/i18n/: LanguageManager.cpp  LanguageManager.h
src/imageops/: ImageOps.cpp  ImageOps.h
src/io/: WorkflowSerializer.cpp  WorkflowSerializer.h
src/nodes/: ImageNodes.cpp  ImageNodes.h
tests/: core_tests.cpp
translations/: ImageNodeEditor_zh_CN.ts
workflows/: branch_blend.json  demo.json
